--- a/Study2 Similarity months and general yearly distribution.Rmd
+++ b/Study2 Similarity months and general yearly distribution.Rmd
@@ -54,9 +54,57 @@ hour_delay2<-hour_delay2%>%add_column(Total=day24$count)
 #add delay rates by hour to end of column
 hour_delay2<-hour_delay2%>%mutate(delay_rates=round(Yes/Total,2))
 
-yearly_delay_rate_24hours<-hour_delay2$delay_rates
+yearly<-hour_delay2[,c(1,3,5)]
+colnames(yearly)[2]="yearly_count"
+colnames(yearly)[3]="yearly_dr"
 
 
 
 ```
+
+Blah blah
+
+```{r}
+cs_p.values_on_rate<-rep(0,12)
+cs_p.values_on_count<-rep(0,12)
+cs_p.values_on_count_sim<-rep(0,12)
+
+
+for(i in 1:12){
+  
+  monthly_temp0=df%>%filter(month==i)%>%group_by(fhour,delay)%>%summarise(count=n())%>%
+    spread(key="delay",value="count")%>%
+    mutate(Yes=replace_na(Yes,0))%>%
+    mutate(No=replace_na(No,0))
+  
+  monthly_temp1<-monthly_temp0%>%filter(Yes>10)
+  
+  monthly_temp2<-monthly_temp1%>%add_column(monthly_dr=round(monthly_temp1$Yes/(monthly_temp1$Yes+monthly_temp1$No),2))
+  
+  
+  monthly_temp3<-left_join(monthly_temp2,yearly,"fhour")
+  
+  
+  colnames(monthly_temp3)[3]="monthly_count"
+  
+  temp_result_dr<-chisq.test(monthly_temp3$monthly_dr, monthly_temp3$yearly_dr, correct=FALSE)
+  
+  temp_result_count<-chisq.test(monthly_temp3$monthly_count, monthly_temp3$yearly_count, correct=FALSE)
+  
+  temp_result_count_sim<-chisq.test(monthly_temp3$monthly_count, monthly_temp3$yearly_count, correct=FALSE,simulate.p.value = TRUE)
+  
+  cs_p.values_on_rate[i]<-temp_result_dr$p.value
+  cs_p.values_on_count[i]<-temp_result_count$p.value
+  cs_p.values_on_count_sim[i]<-temp_result_count_sim$p.value
+  
+}
+
+
+
+
+
+
+```
+
+
   
